WIP: documentación de endpoints controllers
